--- a/src/content/docs/development/boba-backend/using-postman.mdx
+++ b/src/content/docs/development/boba-backend/using-postman.mdx
@@ -18,12 +18,12 @@ tutorial. A sample BobaBoard URL to use is
 You can find all the BobaBoard REST API endpoints in our
 [Rest API documentation](/docs/development/rest-api/).
 
-:::important
+<Aside type="note" title="Important">
 
 When using Postman, make sure that the HTTP method in the request corresponds to
 the one required by the API.
 
-:::
+</Aside>
 
 ### How to authenticate Postman requests
 
@@ -51,13 +51,13 @@ environment.
 4. Set up a `firebaseApiKey` variable in your environment with value
    `AIzaSyAYgQGhDsBS6rDKu8PVq_sAQrxt4tIrGEI`.
 
-   :::info
+   <Aside type="note">
 
    Firebase API keys are designed to be used client-side and are not used to
    control access to backend resources. You can learn more on the
    [Firebase API documentation website](https://firebase.google.com/docs/projects/api-keys).
 
-   :::
+   </Aside>
 
 5. Create (and save) the following **Authentication HTTP Request**
 
