--- a/src/content/docs/development/contribute/boba-components.mdx
+++ b/src/content/docs/development/contribute/boba-components.mdx
@@ -65,7 +65,7 @@ boba-editor, or don't care about running the latest version of boba-editor.
 yarn add @bobaboard/boba-editor
 ```
 
-:::danger
+<Aside type="danger">
 
 Not running the latest version might incur in some surprising problems in case
 of incompatible changes. **Since Ms. Boba isn't regularly releasing npm updates,
@@ -75,7 +75,7 @@ You can
 [check when boba-editor was last released](https://www.npmjs.com/package/@bobaboard/boba-editor)
 on its npm page.
 
-:::
+</Aside>
 
 You can now continue to the
 [development instructions](#development-instructions).
@@ -90,21 +90,21 @@ boba-editor as part of updating boba-components.
    The rest of these instructions assume you're installing boba-editor in the
    same containing folder as boba-components.
 
-   :::danger
+   <Aside type="danger">
 
    If you install boba-editor _within_ boba-components, you're going to have a bad
    time.
 
-   :::
+   </Aside>
 
 2. **Build and link boba-editor.**
 
-   :::caution
+   <Aside type="caution">
 
    **Make sure you're in the boba-editor directory!** To check the present
    directory, you can use the `pwd` command.
 
-   :::
+   </Aside>
 
    In a terminal, run the following commands:
 
@@ -119,12 +119,12 @@ boba-editor as part of updating boba-components.
 
 3. **Install boba-editor in boba-components**
 
-   :::caution
+   <Aside type="caution">
 
    **Make sure you're in the boba-components directory!** To check the present
    directory, you can use the `pwd` command.
 
-   :::
+   </Aside>
 
    In a terminal, run the following command
 
@@ -146,7 +146,7 @@ boba-editor as part of updating boba-components.
 
 ## Development Instructions
 
-:::warning
+<Aside type="caution">
 
 This codebase requires Node **16**. If you're using
 [Node Version Manager](https://github.com/nvm-sh/nvm), you can switch to version
@@ -154,7 +154,7 @@ This codebase requires Node **16**. If you're using
 
 You can check the current Node version by running `node -v`.
 
-:::
+</Aside>
 
 In a terminal, run the following command:
 
