--- a/src/content/docs/development/contribute/boba-editor.mdx
+++ b/src/content/docs/development/contribute/boba-editor.mdx
@@ -43,7 +43,7 @@ via GitHub Desktop, then enter your new directory in a terminal and run
 
 ## Start a Local DevServer
 
-:::warning
+<Aside type="caution">
 
 This codebase requires Node **16**. If you're using
 [Node Version Manager](https://github.com/nvm-sh/nvm), you can switch to version
@@ -51,7 +51,7 @@ This codebase requires Node **16**. If you're using
 
 You can check the current Node version by running `node -v`.
 
-:::
+</Aside>
 
 In a terminal, run the following command:
 
@@ -86,11 +86,11 @@ browser window, embeds should automatically start working.
 
 ### Option 2: Run iFramely on your own machine
 
-:::caution
+<Aside type="caution">
 
 You shouldn't need to do this, unless you're fiddling with iFramely's setup.
 
-:::
+</Aside>
 
 You can run storybook pointing to a local instance of iFramely by using the
 `yarn run storybook:local-embeds` command. To run your own iFramely you can use
