--- a/src/content/docs/development/intro.mdx
+++ b/src/content/docs/development/intro.mdx
@@ -18,7 +18,7 @@ purpose and set of technologies:
 
 ![An overview of how BobaBoard's components fit together](../../../assets/img/documentation/codebase-overview.png)
 
-:::note Why this split?
+<Aside type="note" title="Why this split?">
 
 - **Building a functional, multimedial text editor is a lot of work.** By
   splitting it in its own codebase, we want to facilitate its reuse across
@@ -36,7 +36,7 @@ purpose and set of technologies:
 - **Licensing:** By splitting the codebase, we can apply different licenses to
   different parts of the project.
 
-:::
+</Aside>
 
 ## boba-editor
 
