--- a/src/content/docs/development/knowledge-base/caching.mdx
+++ b/src/content/docs/development/knowledge-base/caching.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 3
 ---
 
-## Caches and Optimistic Updates {#caches}
+## Caches and Optimistic Updates
 
 A cache is a temporary storage location that saves data from slow queries (e.g.
 network queries, database queries) for faster access. Caches are used to quickly
