--- a/src/content/docs/project/roadmap/sprints-and-projects.mdx
+++ b/src/content/docs/project/roadmap/sprints-and-projects.mdx
@@ -5,13 +5,15 @@ sidebar:
   order: 2
 ---
 
-:::note
+import { Aside } from "@astrojs/starlight/components";
+
+<Aside type="note">
 
 The following data is pulled
 [from our GitHub organization](https://github.com/orgs/BobaBoard), and is
 automatically updated.
 
-:::
+</Aside>
 
 ## Sprints
 
