--- a/src/content/docs/users/admins.mdx
+++ b/src/content/docs/users/admins.mdx
@@ -4,14 +4,16 @@ sidebar:
   order: 5
 ---
 
-:::info
+import { Aside } from "@astrojs/starlight/components";
+
+<Aside type="note">
 
 boba.social was the flagship Galaxy for BobaBoard. As the project has refocused
 and reorganized to focus on self-hosting BobaBoard instances, boba.social (and
 its two Realms) are currently privately run by ms. boba and are not directly
 affiliated with the BobaBoard project or FujoCoded LLC.
 
-:::
+</Aside>
 
 Please email the admins below if you need password reset help.
 
