--- a/src/content/docs/users/etiquette.mdx
+++ b/src/content/docs/users/etiquette.mdx
@@ -4,17 +4,19 @@ sidebar:
   order: 3
 ---
 
+import { Aside } from "@astrojs/starlight/components";
+
 As mentioned in other parts of the Guide, our two current Realms have more in
 common than not in common. Below you'll find the guidelines for the type of
 culture we're looking to cultivate in these Realms and their common rules.
 
-:::info
+<Aside type="note">
 
 Please keep in mind that as more Realms open, each Realm will have the
 opportunity to define its own rules and code of conduct. The below guidelines
 only apply to v0 and Fandom Coders Realms.
 
-:::
+</Aside>
 
 ## Our Values
 
