--- a/src/content/docs/users/howto/identities.mdx
+++ b/src/content/docs/users/howto/identities.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 4
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 BobaBoard assigns random identities from a shared pool of identities known as
 the [**Bobadex**](#the-bobadex) to its users. The identities are assigned when
 you create a thread or when you make your first contribution or comment to a
@@ -16,9 +18,12 @@ you will remain as "Outdated Meme".
 If you comment on someone else's post, you may see that "Outdated Meme" was
 assigned to another commenter and now you have become "Bone Daddy".
 
-<blockquote>You do a one pull gacha per thread from a specific pool of names.
-
-<cite>- Lavender Town Resident</cite></blockquote>
+<blockquote>
+You do a one pull gacha per thread from a specific pool of names.
+  <cite>
+	  - Lavender Town Resident
+	</cite>
+</blockquote>
 
 These identities remain anonymous publicly. No user can click through the
 pseudonym or avatar to a profile, nor can they connect any specific posts,
@@ -29,7 +34,7 @@ be as weird as you want, but it also allows you to post without anxiety about
 being _too active_ or _not active enough_. If you post hundreds of times in a
 day or disappear for three months, people won't necessarily know.
 
-:::caution
+<Aside type="caution">
 
 While your real identity is not publicly visible, your posts and comments are
 still associated with your account and can be de-anonymized and subjected to
@@ -37,18 +42,18 @@ moderation.
 
 For more info, please see [When and How We Deanon](#when-and-how-we-deanon).
 
-:::
+</Aside>
 
 You may be wondering "**How do I keep track of who I am if my identity changes
 all the time?**" When you look at a post or comment you make, you will see both
 the assigned anonymous identity and your actual account avatar; that way you can
 keep track of who you are in the thread with a quick glance.
 
-<figure><img src="\img\userguide\youridentity.png" />
+<figure><img src="../../../../assets/img/userguide/youridentity.png" />
 <figcaption>Your View</figcaption>
 </figure>
 
-<figure><img src="\img\userguide\otherusers.png" />
+<figure><img src="../../../../assets/img/userguide/otherusers.png" />
 <figcaption>Another User's View</figcaption>
 </figure>
 
@@ -124,4 +129,4 @@ the interaction took place. Be sure to select the "I'd like to report a
 post/interaction" option.
 
 - [v0 Realm](https://docs.google.com/forms/d/e/1FAIpQLSfyMENg9eDNmRj-jIvIG5_ElJFwpGZ_VPvzAskarqu5kf0MSA/viewform)
-- Fandom Coders _coming soon!_ <!-- ADD LINK -->
+- Fandom Coders _coming soon!_ {/* TODO: ADD LINK */}
