--- a/src/content/docs/users/howto/threads.mdx
+++ b/src/content/docs/users/howto/threads.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 2
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 Threads are the posts you make to a Board and all of the comments and
 contributions to the original post.
 
@@ -58,13 +60,13 @@ images, gifs, tags, etc etc.
 Once your post looks how you want it to, click the **Post** button in the bottom
 right. If you've changed your mind, click the **Cancel** button instead.
 
-:::caution
+<Aside type="caution">
 
 The content of BobaBoard threads, comments, and contributions cannot be edited
 at this time. You'll notice that because of this, we're a lot more forgiving
 about typos and editor weirdness.
 
-:::
+</Aside>
 
 ## Deleting a Thread
 
