--- a/src/content/docs/users/intro.mdx
+++ b/src/content/docs/users/intro.mdx
@@ -4,15 +4,10 @@ sidebar:
   order: 1
 ---
 
+import { Aside } from "@astrojs/starlight/components";
+
 _"BobaBoard will move you and fill you with a feeling of deep peace. I hope your
 time here will be pleasant and your memories will last forever."_
-
-:::note
-
-This user guide is living document still under construction. If anything is
-confusing or unclear, please let us know!
-
-:::
 
 ## What is BobaBoard?
 
@@ -32,12 +27,12 @@ include Tumblr, Discord, LiveJournal, and many others.
 
 ### Realms
 
-:::info
+<Aside type="note">
 
 Realms are a recent step in BobaBoard's journey! Our current vision is explained
 below, but your input will help us shape their future.
 
-:::
+</Aside>
 
 **Realms** are distinct communities within BobaBoard, each with its own
 management, members, and URL. Only users who have joined a Realm can post and
