--- a/src/content/docs/users/self-hosting/bobaboard-installation.mdx
+++ b/src/content/docs/users/self-hosting/bobaboard-installation.mdx
@@ -4,12 +4,16 @@ sidebar:
   order: 2
 ---
 
-:::warning
+import { Aside } from '@astrojs/starlight/components';
+
+<Aside type="caution">
 
 The ability to self-host is still new and experimental. We'd love for people to
 try it out and let us know how it goes, but we currently can't dedicate a lot of
 engineering resources to helping you if you run into difficulties. Host at your
-own risk! :::
+own risk!
+
+</Aside>
 
 ## What is self-hosting, again?
 
