--- a/src/content/docs/users/v0/index.mdx
+++ b/src/content/docs/users/v0/index.mdx
@@ -2,14 +2,16 @@
 title: The v0 Realm
 ---
 
-:::note
+import { Aside } from '@astrojs/starlight/components';
+
+<Aside type="note">
 
 The v0 Realm is part of the boba.social Galaxy which is privately run by ms.
 boba. For more information, see [Galaxy & Realm Admins](../admins).
 
 The v0 Realm is currently not adding more members.
 
-:::
+</Aside>
 
 The v0 Realm is the Alpha version of BobaBoard, the place where the magic
 started and the flagship of the BobaBoard concept. It's a little wacky and a
@@ -20,7 +22,7 @@ about, check out the below information to see if V0 might be a good fit.
 
 ### Would you like it?
 
-:::warning
+<Aside type="caution">
 
 The v0 realm is open for NSFW materials to be posted everywhere; it is not
 constrained to a single board. Please use caution when viewing boards and be
@@ -29,7 +31,7 @@ sure to read
 Although members often use content notices and spoilers as a courtesy, **this is
 voluntary** and their use is not required or enforced/moderated.
 
-:::
+</Aside>
 
 V0 users are one-part volunteer, one-part extremely patient alpha testers, and
 one-part "anything goes" users.
