--- a/src/content/docs/volunteering/coding/sprints.mdx
+++ b/src/content/docs/volunteering/coding/sprints.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 3
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 Joining a sprint is the easiest way to help out with BobaBoard's development.
 We're currently planning to onboard 3-4 new developers with each subsequent
 sprint.
@@ -32,12 +34,12 @@ see past, present and future sprints in the
 5. **Each volunteer calls "dibs" on 2-3 issues** (or less, according to comfort)
    to tackle during the sprint.
 
-:::note
+<Aside type="note">
 
 Volunteers that are not planning to participate in the upcoming sprint are still
 welcome to join these brainstorming sessions!
 
-:::
+</Aside>
 
 ### During a sprint
 
@@ -114,16 +116,16 @@ know they're struggling. Examples of support include:
    giving them a good time. Remember: we want you to come out of the
    volunteering experience enriched, not scarred!
 
-:::note
+<Aside type="note">
 
 A bad task match is never the volunteer's fault! There are many reasons a match
 might fail, including Ms Boba underestimating the difficulty of a task (a skill
 she's been working on). There is _no shame or judgement_ in asking for help, or
 dropping a task.
 
-:::
+</Aside>
 
-If we can provide any further help or accomodations, let us know! We're here to
+If we can provide any further help or accommodations, let us know! We're here to
 see you succeed.
 
 ### ...don't accomplish anything during a week (or the whole sprint)?
@@ -153,7 +155,7 @@ As mentioned in the
 ["have trouble with or feel overwhelmed by a task"](#have-trouble-with-or-feel-overwhelmed-by-a-task)
 session, **we offer volunteers continuous help in our Discord server**. Our
 priority is for volunteers to have a good time, so if you need _any_ type of
-accomodation, let us know!
+accommodation, let us know!
 
 ### ...feel uncomfortable asking "basic" questions in public?
 
