--- a/src/content/docs/volunteering/experience/code-of-conduct.mdx
+++ b/src/content/docs/volunteering/experience/code-of-conduct.mdx
@@ -53,7 +53,7 @@ actions and communication, with a sincere intention to deal fairly and
 respectfully with others. Intentional violations of basic standards of decency
 toward your fellow humans have no place here.
 
-:::important
+<Aside type="note" title="Important">
 
 **These rules don't exist as hard fences, but as guiding lines.** The final
 decision always rests on the judgement of the project leads.
@@ -62,7 +62,7 @@ decision always rests on the judgement of the project leads.
 want to serve.** Unless your behavior is grossly inappropriate, you aren't going
 to be suddenly banned for a slip up, or for a careless remark.
 
-:::
+</Aside>
 
 With that said, BobaBoard's goal is to first and foremost protect niche fandom
 communities, and give them a safe, respectful space in which to freely express
