--- a/src/content/docs/volunteering/experience/volunteer-application.mdx
+++ b/src/content/docs/volunteering/experience/volunteer-application.mdx
@@ -1,6 +1,7 @@
 ---
 title: Apply to Volunteer
 ---
+import { Aside } from '@astrojs/starlight/components';
 
 import VolunteerNewsletterForm from "../../../../components/VolunteerNewsletterForm";
 
@@ -13,7 +14,7 @@ perfect! However, if you find yourself frequently thinking you can't or don't
 want to do these things while reading the list, BobaBoard may not be a good
 cultural fit for you.
 
-{/* TODO: Highlight the must haves /*}
+{/* TODO: Highlight the must haves */}
 
 ### General Traits
 
@@ -55,14 +56,14 @@ cultural fit for you.
 
 Upcoming calls for volunteers will be put out through our volunteering newsletter. Please sign up and keep an eye out for opportunities that interest you!
 
-:::warning
+<Aside type="caution">
 
 **All BobaBoard spaces are 18+ only.** If you're below that age, you'll be ineligible
 to volunteer. We'll be happy to have you once you're all grown up!
 
 By signing up for the volunteering newsletter you certify you're of legal age.
 
-:::
+</Aside>
 
 <VolunteerNewsletterForm />
 
@@ -78,7 +79,7 @@ You can learn more about how roles work in our organization in
 ### Q: What are the expectations for volunteers? What if my availability changes?
 
 We understand that life is complicated, and we strive to be flexible with expectations
-and commitments. Especially because many BobaBoard volunteers come from marginalzied or
+and commitments. Especially because many BobaBoard volunteers come from marginalized or
 underrepresented communities, shit often tends to unpredictably hit the fan.
 
 If you have to walk back on a commitment made, we won't hold it against you. To learn
