--- a/src/content/docs/volunteering/general/leading-a-retro.mdx
+++ b/src/content/docs/volunteering/general/leading-a-retro.mdx
@@ -64,7 +64,9 @@ To start a retrospective, the lead will:
    and to use their best judgement when sharing in private.
 6. Ask for confirmation that people understand and agree to these rules.
 
-:::note Welcome Template
+<Aside type="note">
+
+Welcome Template
 
 This was used by Ms Boba in some retrospectives and is presented for
 inspiration.
@@ -107,7 +109,7 @@ inspiration.
 
 </details>
 
-:::
+</Aside>
 
 ## After the retrospective: collecting action items
 
