--- a/src/content/docs/volunteering/general/retrospectives.mdx
+++ b/src/content/docs/volunteering/general/retrospectives.mdx
@@ -78,13 +78,13 @@ the time between the end of the effort and the retrospective, volunteers should:
    changing people's behavior, but in terms of changing the underlying process
    that led to the issue.
 
-:::note
+<Aside type="note">
 
 Uncovering what went well during an effort is as important as uncovering what
 didn't! Awareness of what currently works well helps ensure good practices
 aren't forgotten, and increases confidence when making changes.
 
-:::
+</Aside>
 
 {/* TODO: #### On actionable improvements */}
 
@@ -97,25 +97,25 @@ aren't forgotten, and increases confidence when making changes.
 3. **Everyone shares their thoughts on what went well and what didn't**, and we
    look for common themes.
 
-   :::warning
+   <Aside type="caution">
 
    While giving feedback is a fundamental part of the retrospective process, it
    is important to do so with kindness and respect. Please be mindful of your
    tone and language!
 
-   :::
+   </Aside>
 
 4. Once the main issues have been identified, participants discuss actionable
    improvements that could have helped mitigate them.
 
-   :::warning
+   <Aside type="caution">
 
    During a retrospective, try to refrain from using the word "you". Instead of
    saying—or thinking!—_"you should have done X"_, it's important to frame the
    discussion as _"we should have done X"_. This helps keep the retrospective
    focused on collective improvement rather than individual blame.
 
-   :::
+   </Aside>
 
 5. The Retrospective Lead (or another participant) summarizes the discussion,
    and **participants decide on a few actionable improvements to implement in
