--- a/src/content/docs/volunteering/team/index.mdx
+++ b/src/content/docs/volunteering/team/index.mdx
@@ -4,12 +4,14 @@ sidebar:
   order: 1
 ---
 
-:::warning
+import { Aside } from '@astrojs/starlight/components';
+
+<Aside type="caution">
 
 We're currently in the early(ish) stages of figuring out how to organize
 ourselves effectively. Expect things to be incomplete or change unexpectedly.
 
-:::
+</Aside>
 
 ## How We Assign Roles
 
@@ -69,9 +71,9 @@ will focus on things like:
   related cultural documentation.
 - Helping to create a fun and engaging volunteer experience.
 
-:::caution
+<Aside type="caution">
 
 The Community Team is the _least_ solidified of our team plans and all of the
 above is subject to change!
 
-:::
+</Aside>
