--- a/src/content/docs/development/boba-backend/apis/testing-endpoints.mdx
+++ b/src/content/docs/development/boba-backend/apis/testing-endpoints.mdx
@@ -8,19 +8,41 @@ This document defines how to write tests for BobaBoard's REST API endpoints.
 
 ## What are tests
 
-Tests ensures that software does what it's supposed to do. They can be used both to find new bugs and to avoid the accidental reintroduction of previously-known ones.
+Tests ensures that software does what it's supposed to do. They can be used both
+to find new bugs and to avoid the accidental reintroduction of previously-known
+ones.
 
-Tests are a fundamental part of creating stable, robust software, and their importance only increases as the project itself grows. Having good test coverage—that is, ensuring that a significant percentage of code is checked as part of the testing process—allows developers to create new features confidently, and reduces the amount of bugs that reach the end users. It also allows developer to make fundamental architectural changes without causing a [regression](https://en.wikipedia.org/wiki/Software_regression) (i.e. breakage) in functionality.
+Tests are a fundamental part of creating stable, robust software, and their
+importance only increases as the project itself grows. Having good test
+coverage—that is, ensuring that a significant percentage of code is checked as
+part of the testing process—allows developers to create new features
+confidently, and reduces the amount of bugs that reach the end users. It also
+allows developer to make fundamental architectural changes without causing a
+[regression](https://en.wikipedia.org/wiki/Software_regression) (i.e. breakage)
+in functionality.
 
 ## API testing
 
-While many [different types of tests](https://educative.io/blog/software-testing-types-101#functional-methods) exists, APIs are usually tested through integration tests. Integration tests ensure that multiple components (e.g. database, server) work together as expected. In the case of BobaBoard's API routes, integration tests cover the database and the server, with authentication and caching being instead [mocked](#mocking).
+While many
+[different types of tests](https://educative.io/blog/software-testing-types-101#functional-methods)
+exists, APIs are usually tested through integration tests. Integration tests
+ensure that multiple components (e.g. database, server) work together as
+expected. In the case of BobaBoard's API routes, integration tests cover the
+database and the server, with authentication and caching being instead
+[mocked](#mocking).
 
 ### Test cases
 
-Tests are divided in test cases. Each test case represents a set of actions that verify that a single behavior of the software under test is working as intended. For example, a test case might verify that a `GET` request to the `/users/@me/` endpoint returns a `401` error when no authentication data is present. Another test case might verify that a `PATCH` request to the `/posts/:post_id/contribution` endpoint correctly updates the corresponding contribution when the `payload` includes a set of new tags.
+Tests are divided in test cases. Each test case represents a set of actions that
+verify that a single behavior of the software under test is working as intended.
+For example, a test case might verify that a `GET` request to the `/users/@me/`
+endpoint returns a `401` error when no authentication data is present. Another
+test case might verify that a `PATCH` request to the
+`/posts/:post_id/contribution` endpoint correctly updates the corresponding
+contribution when the `payload` includes a set of new tags.
 
-Good test cases are small, self-contained, and independent. They should follow the `Arrange-Act-Assert` pattern., which divides each test case into 3 phases:
+Good test cases are small, self-contained, and independent. They should follow
+the `Arrange-Act-Assert` pattern., which divides each test case into 3 phases:
 
 1. **Arrange:** Set up all necessary inputs and preconditions.
 2. **Act:** Run the code under test.
@@ -47,9 +69,17 @@ test("Returns data for the logged in user", async () => {
 
 ### Mocking
 
-Software might sometimes rely on external, complex services or library methods that are not suited for a testing environment (which might, for example, lack network connectivity or filesystem access). Rather than rely on these libraries or services, tests use _mock objects_, fake versions of these services and libraries that stand in for the real ones.
+Software might sometimes rely on external, complex services or library methods
+that are not suited for a testing environment (which might, for example, lack
+network connectivity or filesystem access). Rather than rely on these libraries
+or services, tests use _mock objects_, fake versions of these services and
+libraries that stand in for the real ones.
 
-Because `mocks` are fake objects with no implementations, tests might need to define (if necessary) values returned by calls to mocked objects. If needed, tests can also make assertions on how the system under test interacted with the mocks, ensuring, for example, that certain methods have been called with the right parameters.
+Because `mocks` are fake objects with no implementations, tests might need to
+define (if necessary) values returned by calls to mocked objects. If needed,
+tests can also make assertions on how the system under test interacted with the
+mocks, ensuring, for example, that certain methods have been called with the
+right parameters.
 
 ```javascript
   test("returns cached data for logged in user", async function () {
@@ -73,31 +103,27 @@ Because `mocks` are fake objects with no implementations, tests might need to de
     expect(cache().hget).toBeCalledWith(CacheKeys.USER, "logged_in_user_id");
 ```
 
-`Mocks` used in boba-backend's testing include the `cache`, network requests (i.e. the `axios` library), and the authentication service.
+`Mocks` used in boba-backend's testing include the `cache`, network requests
+(i.e. the `axios` library), and the authentication service.
 
-## Testing boba-backend's API Routes
+{/* TODO: ## Testing boba-backend's API Routes
 
-TODO
-
-<!--
 https://www.npmjs.com/package/jest-extended
 
 ### Start a new server for the route you're testing
 
 Call `startTestServer(router)`.
 
-:::GOTCHA
+Follow this syntax exactly, and do **not** destructure the object returned by
+`startTestServer(router)`. If you do, `app` will be undefined within your tests,
+and you're going to have a bad time.
 
-Follow this syntax exactly, and do **not** destructure the object returned by `startTestServer(router)`. If you do, `app` will be undefined within your tests, and you're going to have a bad time.
-
-:::
-
-For more information, you can read [Jest's mocking guide](https://jestjs.io/docs/mock-functions)/
-
+For more information, you can read
+[Jest's mocking guide](https://jestjs.io/docs/mock-functions)/
 
 ### How to add authentication
 
 1. add `jest.mock("../../../handlers/auth");`
 2. `setLoggedInUser`
 
-### How to test cache -->
+### How to test cache */}
