--- a/src/content/docs/development/boba-backend/backend-development-outline.mdx
+++ b/src/content/docs/development/boba-backend/backend-development-outline.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 2
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 While every feature is unique, developing on boba backend usually involves
 changes to one or more of these entities:
 
@@ -84,13 +86,13 @@ During the development phase you should:
 5. **Create a test file:** if no test exists for this endpoint, add it, and test
    that calling the endpoint correctly returns an HTTP 501 Error.
 
-:::warning
+<Aside type="caution">
 
 At this stage, endpoint development might be blocked while needed permissions or
 database queries are created. You can move on to the appropriate sections as
 needed, and come back once you're unblocked.
 
-:::
+</Aside>
 
 6. **Add permissions middleware and update tests:** if the endpoint needs to be
    gated on special conditions (e.g. the user being logged in or a permission
