--- a/src/content/docs/development/boba-backend/testing.mdx
+++ b/src/content/docs/development/boba-backend/testing.mdx
@@ -4,11 +4,13 @@ sidebar:
   order: 6
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 You can run tests by using the `yarn run test:watch` command.
 
-:::important
+<Aside type="note" title="Important">
 
 Tests will fail if the currently-running database has been modified from its
 initial state. Before running tests, stop and restart the database.
 
-:::
+</Aside>
