--- a/src/content/docs/development/boba-frontend/queries-cache.mdx
+++ b/src/content/docs/development/boba-frontend/queries-cache.mdx
@@ -2,6 +2,8 @@
 title: Caching Queries
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 BobaBoard's frontend uses [React Query](https://react-query.tanstack.com/) as
 its query caching mechanism. See our knowledge base for basic information on
 [caches](../knowledge-base/caching).
@@ -59,7 +61,7 @@ const set[entity]InCache = ({
 }
 ```
 
-:::important
+<Aside type="note" title="Important">
 
 The transform method **must** return:
 
@@ -69,7 +71,7 @@ The transform method **must** return:
 This ensures React's re-rendering logic correctly picks up (or ignores) the
 change.
 
-:::
+</Aside>
 
 Our update methods can then use different transformers to update the data:
 
