--- a/src/content/docs/development/contribute/before-you-start.mdx
+++ b/src/content/docs/development/contribute/before-you-start.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 Before you start, consider reading the [codebase overview](../intro) to
 understand the different areas of the project and the technologies used in each
@@ -22,12 +22,7 @@ this documentation better.
 
 </Aside>
 
-:::note
-
-TODO[Ms.Boba]: Create a intro page to help people with a specific skill (or
-desire to learn a specific skill) find good entry points to check out issues.
-
-:::
+{/* TODO: Create a intro page to help people with a specific skill (or desire to learn a specific skill) find good entry points to check out issues. */}
 
 ## Step 0 - Sign up for a GitHub Account
 
@@ -42,14 +37,14 @@ You can find open issues in our
 ["good first issue"](https://github.com/BobaBoard/issues/issues?q=is%3Aissue+is%3Aopen+label%3A%22good+first+issue%22)
 are particularly relevant.
 
-:::caution
+<Aside type="caution">
 
 **The issue tracker is currently a WIP.** Not all open issues are reflected in
 it, and some issues and their labels might be out of date or incorrect. If
 nothing there strikes your fancy (or you want to know current priorities),
 consider contacting Ms. Boba for other options.
 
-:::
+</Aside>
 
 ## Step 2 - Contact Ms. Boba
 
@@ -67,7 +62,7 @@ Env page.
 
 ## Step 3 - Keep in touch (and submit code)
 
-:::important
+<Aside type="note" title="Important">
 
 The main thing we ask volunteers is to _**communicate, communicate,
 communicate**_. Unless you specifically request an "urgent" issue (which comes
@@ -76,7 +71,7 @@ project. We know things can happen and that life might get in the way, and **we
 don't judge contributors for dropping out, or taking longer than planned. We
 _just need to know_, so we can plan accordingly.**
 
-:::
+</Aside>
 
 Ms. Boba (or another volunteer) will periodically ping you for updates. Just let
 her know what's up (including "nothing") and submit a pull request when you're
