--- a/src/content/docs/project/features/identities/bobadex.mdx
+++ b/src/content/docs/project/features/identities/bobadex.mdx
@@ -11,11 +11,10 @@ they create new `threads`.
 A `BobaDex` can be further divided in `Seasons`, each containing a subset of the
 `Identities` in the `BobaDex`.
 
-:::OPEN QUESTION
+## Open Questions
 
 - Can `boards` or `threads` have their own BobaDex?
 - Can `users` choose which `Season` to post from when joining a `thread`?
 
-:::
 
 {/* TODO: Fill this! */}
