--- a/src/content/docs/users/fandom_coders/index.mdx
+++ b/src/content/docs/users/fandom_coders/index.mdx
@@ -2,18 +2,20 @@
 title: Fandom Coders
 ---
 
+import { Aside } from "@astrojs/starlight/components";
+
 Fandom Coders is the first official Realm. It was launched on 4/20/2022 as an
 experiment to ensure that it was possible for the BobaBoard code to support more
 than one Realm on a domain.
 
-:::note
+<Aside type="note">
 
 Fandom Coders is currently on hiatus while volunteers work to make realm set-up
 and maintenance easier!
 
-:::
+</Aside>
 
-<!-- COMMMENTED OUT SO WE CAN MAKE LIKE ELSA ON 6/9
+{/* COMMMENTED OUT SO WE CAN MAKE LIKE ELSA ON 6/9
 # How to Get An Account
 - Who is welcome, what people fit
-- how to get an invite. -->
+- how to get an invite. */}
